--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "npm run build && scp -r ./build/* sharon.j.segal@sharonsegal.students.nomoreparties.site:/home/sharon.j.segal/around-frontend"
+    "deploy": "npm run build && scp -r ./build/* sharon.j.segal@sharon.students.nomoreparties.site:/home/sharon.j.segal//react-around-api-full/frontend/build"
   },
   "eslintConfig": {
     "extends": [
