--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,8 @@
     "type": "git",
     "url": "git+https://github.com/SharonJseg/around-express.git"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["MERN stack", "ReactJS", "Express", "Final project", "Practicum By Yandex"],
+  "author": "Sharon Segal",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/SharonJseg/around-express/issues"
@@ -33,6 +33,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.5.1",
     "express-winston": "^4.2.0",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
